# nginx_wrapper_api

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/routes/: health.rs  mod.rs  service.rs  test.rs
src/routes/system/: metrics.rs  mod.rs  network.rs
