[package]
name = "node-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
async-std = { version = "1.13.2", features = ["attributes"] }
dotenvy = "0.15.7"
flexi_logger = "0.31.7"
log = "0.4.28"
num_cpus = "1.17.0"
serde_json = "1.0"
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }